# STOPT

./: README.md  installation.txt  readme.txt
STOPT/: untitled.m~
STOPT/OCsolver/: CMakeLists.txt
STOPT/OCsolver/data/: 5dof.xml  NAOURDF_inertial.xml
STOPT/OCsolver/example/5DOF_Robot/: fingerRobot.cpp
STOPT/OCsolver/example/Kuka_Youbot/: kukaYoubot.cpp
STOPT/OCsolver/example/NAO_Robot/: naoRobot.cpp
STOPT/OCsolver/example/test/: OCP_definition.cpp  obstacleAvoidance.cpp
STOPT/OCsolver/include/RobOptTraj/: directTranscription.h
STOPT/OCsolver/include/RobOptTraj/directTranscription/collocationMethods/: hermiteSimpson.h  trapezoidal.h
STOPT/OCsolver/include/RobOptTraj/directTranscription/core/: problem.h  trajSolver.h  userFunctions.h
STOPT/OCsolver/include/RobOptTraj/directTranscription/derivatives/: analytical.h  numerical.h
STOPT/OCsolver/include/RobOptTraj/directTranscription/nlp/: scaling.h  setup.h  sparsity.h
STOPT/OCsolver/include/RobOptTraj/directTranscription/nlpSolver/: IPOPT_Interface.h
STOPT/OCsolver/include/RobOptTraj/directTranscription/utils/: getVariables.h  utils.h
STOPT/OCsolver/src/RobOptTraj/directTranscription/collocationMethods/trapezoidal/: constraints.cpp  costFcn.cpp
STOPT/OCsolver/src/RobOptTraj/directTranscription/core/: filedependence.txt  problem.cpp  trajSolver.cpp
STOPT/OCsolver/src/RobOptTraj/directTranscription/derivatives/: analytical.cpp  numerical.cpp
STOPT/OCsolver/src/RobOptTraj/directTranscription/nlp/: NLP_Interface.cpp  NLP_bounds.cpp  NLP_guess.cpp  NLP_scaling.cpp  NLP_sparsity.cpp
STOPT/OCsolver/src/RobOptTraj/directTranscription/utils/: getVariables.cpp  utils.cpp
STOPT/ipopt/cmake/linux-64/: ipopt-config.cmake
STOPT/openhrc/cmake/linux-64/: openhrc-config.cmake
STOPT/openhrc/include/openhrc/: core.h  dynamics.h  trajectoryOptimization.h  types.h
STOPT/openhrc/include/openhrc/core/: body.h  core-basic.h  dynamic_body.h  geometry.h  joint.h  markup.h  multibody.h  operational_handle.h  spatial_algebra.h  string_util.h  types.h  world.h
STOPT/openhrc/include/openhrc/dynamics/: Lie_operators.h  forward_dynamics.h  inverse_dynamics.h  kinematics.h
STOPT/openhrc/include/openhrc/trajectoryOptimization/: directCollocation.h
